# dbt-postgres-docker-starter

./: .gitignore  README.md  connect-docker.sh  dbt_project.yml  docker-compose.yml  profiles.yml  pyproject.toml
datagen/: core.py  main.py
datagen/entrypoints/: __init__.py  user_events.py
dockerfiles/datagen/: Dockerfile
dockerfiles/datagen/jobs/: user_events.sh
dockerfiles/dbt/: Dockerfile
dockerfiles/postgres/: Dockerfile
models/staging/: stg_user_events.sql
