[tool.poetry]
name = "dbt-postgres-docker-starter"
package-mode = false
version = "0.1.0"
description = ""
authors = ["David Sillman <dsillman2000@gmail.com>"]
readme = "README.md"
packages = [{ include = "datagen" }]

[tool.poetry.dependencies]
python = "^3.11"
psycopg = "^3.2.3"
sqlalchemy = "^2.0.36"

[tool.poetry.group.dbt.dependencies]
dbt-core = "^1.8.9"
dbt-postgres = "^1.8.2"

[tool.poetry.group.datagen.dependencies]
fire = "^0.7.0"

[tool.poetry.scripts]
datagen = "datagen.main:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
